--- a/homeworks/week6/hw1/index.html
+++ b/homeworks/week6/hw1/index.html
@@ -33,20 +33,51 @@
                 咬一口不只賣餐點，我們希望能夠讓大家愛上料理的魅力，餐館特意打造全開放式廚房，烹調透明化，也不定時舉辦美食廚房DIY，讓大家體驗不需要過多調味，就能擁有千變萬化的食物口感。
             </p>
             <div class="buttons">
-            	<div class="button btn-order">我要點餐</div>
-            	<div class="button btn-query">查詢訂單</div>
+                <div class="button btn-order">我要點餐</div>
+                <div class="button btn-query">查詢訂單</div>
             </div>
         </section>
     </div>
+    <section class="section">
+        <h2 class="section__title">Menu 搶先看</h2>
+        <div class="section__images">
+            <img src="images/f-001.png" alt="">
+            <img src="images/f-002.png" alt="">
+            <img src="images/f-003.png" alt="">
+            <img src="images/f-004.png" alt="">
+        </div>
+    </section>
+    <div class="wrapper">
         <section class="section">
-            <h2 class="section__title">Menu 搶先看</h2>
-            <div class="section__images">
-            	<img src="images/f-001.png" alt="">
-            	<img src="images/f-002.png" alt="">
-            	<img src="images/f-003.png" alt="">
-            	<img src="images/f-004.png" alt="">
+            <h2 class="section__title">吃過都說好</h2>
+            <div class="section__comment">
+                <div class="section__comment-block">
+                    <div class="user">
+                        <img src="images/p-1.png" alt="">
+                        <p class="user__id">國父桑</p>
+                    </div>
+                    <div class="comment__content">我一生疲於建國，去過日本，去過歐洲，卻從未到過台北101，也從來沒有吃過這麼好吃的東西...今天在時空旅行者的幫助下我終於吃到了...此生再無遺憾 QAQ!!</div>
+                </div>
+                <div class="section__comment-block">
+                    <div class="user">
+                        <img src="images/p-2.png" alt="">
+                        <p class="user__id">可達鴨</p>
+                    </div>
+                    <div class="comment__content">三雙鞋等於30，兩個人加一雙鞋等於20，一雙冰淇淋加一雙冰淇淋加一個人等於13，那$#%$#%^%$^##$%等於多少...唉，大概咬一口就知道了!!!
+                    </div>
+                </div>
+                <div class="section__comment-block">
+                    <div class="user">
+                        <img src="images/p-3.png" alt="">
+                        <p class="user__id">旅かえる旅行青蛙
+                        </p>
+                    </div>
+                    <div class="comment__content">自從呱呱呱呱呱以後，我呱呱呱呱呱，非常感謝呱呱呱呱呱呱呱呱呱呱呱呱呱呱，下次呱呱呱呱呱我呱呱呱呱呱，一定呱呱呱呱呱呱呱呱呱呱呱呱!!!
+                    </div>
+                </div>
             </div>
         </section>
+    </div>
     <div class="wrapper">
         <section class="section">
             <h2 class="section__title">我們在哪裡</h2>
@@ -54,21 +85,21 @@
         </section>
     </div>
     <footer>
-    	<div class="footer__top">
-    		<div class="wrapper">
-    			<div class="footer__info">
-    				<p>餐館地址: 天上地下天堂路三分之一里六段520號</p>
-    				<p>訂位專線：02-1314-5566</p>
-    				<p>營業時間：週一〜週五 09:00~18:00 / 週六、週日、國定假日（含連假）休息</p>
-    				<p>email：service@justabite.com.tw</p>
-    			</div>
-    			<div class="footer__site">
-    				<p class="footer__title">Just A Bite!</p>
-    				<p>Facebook / Instagram / Youtube</p>
-    			</div>
-    		</div>
-    	</div>
-    	<div class="footer__bottom">Copyright © 2020 Just A Bite All Rights Reserved. 咬一口股份有限公司版權所有</div>
+        <div class="footer__top">
+            <div class="wrapper">
+                <div class="footer__info">
+                    <p>餐館地址: 天上地下天堂路三分之一里六段520號</p>
+                    <p>訂位專線：02-1314-5566</p>
+                    <p>營業時間：週一〜週五 09:00~18:00 / 週六、週日、國定假日（含連假）休息</p>
+                    <p>email：service@justabite.com.tw</p>
+                </div>
+                <div class="footer__site">
+                    <p class="footer__title">Just A Bite!</p>
+                    <p>Facebook / Instagram / Youtube</p>
+                </div>
+            </div>
+        </div>
+        <div class="footer__bottom">Copyright © 2020 Just A Bite All Rights Reserved. 咬一口股份有限公司版權所有</div>
     </footer>
 </body>
 
