--- a/homeworks/week7/hw2/index.html
+++ b/homeworks/week7/hw2/index.html
@@ -18,7 +18,7 @@
                 <li class="active"><a href="">抽個大獎</a></li>
                 <li><a href="">我要點餐</a></li>
                 <li><a href="">查詢訂單</a></li>
-                <li><a href="">常見問題</a></li>
+                <li><a href="faq.html">常見問題</a></li>
             </ul>
         </div>
     </nav>
