[week7][hw2][js]

--- a/homeworks/week7/hw2/faq.html
+++ b/homeworks/week7/hw2/faq.html
@@ -18,7 +18,7 @@
         <li><a href="">抽個大獎</a></li>
         <li><a href="">我要點餐</a></li>
         <li><a href="">查詢訂單</a></li>
-        <li class="><a href="faq.html">常見問題</a></li>
+        <li class="active"><a href="faq.html">常見問題</a></li>
       </ul>
     </div>
   </nav>
@@ -32,35 +32,35 @@
         </div>
         <div class="faq__answer">線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</div>
       </div>
-      <div class="section__faq active">
+      <div class="section__faq">
         <div class="faq__title">
           <span class="faq__num">Q2:</span>
           <span class="faq__question">目前提供哪些付款方式？</span>
         </div>
         <div class="faq__answer">線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</div>
       </div>
-      <div class="section__faq active">
+      <div class="section__faq">
         <div class="faq__title">
           <span class="faq__num">Q3:</span>
           <span class="faq__question">線上刷卡如何操作呢？</span>
         </div>
         <div class="faq__answer">線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</div>
       </div>
-      <div class="section__faq active">
+      <div class="section__faq">
         <div class="faq__title">
           <span class="faq__num">Q4:</span>
           <span class="faq__question">如何查詢目前訂單的處理情況？</span>
         </div>
         <div class="faq__answer">線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</div>
       </div>
-      <div class="section__faq active">
+      <div class="section__faq">
         <div class="faq__title">
           <span class="faq__num">Q5:</span>
           <span class="faq__question">訂單成立後，是否可以取消或是更改訂單數量及商品？</span>
         </div>
         <div class="faq__answer">線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</div>
       </div>
-      <div class="section__faq active">
+      <div class="section__faq">
         <div class="faq__title">
           <span class="faq__num">Q6:</span>
           <span class="faq__question">我想購買的商品已經缺貨，什麼時候會進貨呢？</span>
